# aforoTesting

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  Pipfile  README.md  docker-compose.env.yml  main.py  pyproject.toml  requirements.txt
backend/conf/: blueprint.py  db.py
backend/const/: conn.py  keys.py
backend/controller/: citizen.py  publicEstablishment.py  user.py
backend/model/: citizen.py  publicEstablishment.py
backend/proxy/: Dockerfile  nginx.conf
backend/repository/: citizen.py  publicEst.py  publicEstablishment.py  user.py
backend/service/: citizen.py  publicEstablishment.py  user.py
backend/src/: app.ini  main.py
backend/src/conf/: app.py  auth.py  blueprint.py  db.py
backend/src/const/: keys.py  roles.py  values.py
backend/src/controller/: citizen.py  publicEstablishment.py  user.py
backend/src/model/: category.py  user.py
backend/src/repository/: citizen.py  publicEstablishment.py  user.py
backend/src/service/: citizen.py  publicEstablishment.py  user.py
database/: Dockerfile  README.md  docker-compose.yml  fillDB.py
database/dump/: 01.sql
front/: README.md  package.json
front/src/: App.js  index.js
front/src/client/: citizen.tsx  public_establishment.tsx  user.tsx
front/src/constant/: index.js  (+2 more)
frontend/: README.md  package.json  tsconfig.json
frontend/pages/: _app.js  index.js  temp.js
populate/: dataCitizenRegister.csv  dataEstablishmentRegister.csv  dataRegisterEntry.csv  dataRegisterExit.csv  robotCitizenRegister.py  robotEstablishmentRegister.py  robotRegisterEntry.py  robotRegisterExit.py
(+50 files in other folders)
